# cigi

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/CigiDummyIG/: CMakeLists.txt  CigiDummyIG.def
examples/CigiDummyIG/source/: DummyIG.cpp
examples/CigiMiniHost/: CMakeLists.txt
examples/CigiMiniHost/source/: MiniHost.cpp
examples/tinyxml/: CMakeLists.txt
